--- a/docs/_snippets/alerts/tags.mdx
+++ b/docs/_snippets/alerts/tags.mdx
@@ -12,7 +12,7 @@ models:
 ```
 
 ```yml test
-tests:
+data_tests:
   - not_null:
     tags: ["#marketing", "#data_ops"]
 ```
@@ -30,7 +30,7 @@ models:
     subfolder:
       tags: ["#marketing", "#data_ops"]
 
-tests:
+data_tests:
   path:
     subfolder:
       tags: ["#marketing", "#data_ops"]
