--- a/docs/data-tests/anomaly-detection-configuration/ignore_small_changes.mdx
+++ b/docs/data-tests/anomaly-detection-configuration/ignore_small_changes.mdx
@@ -29,11 +29,12 @@ If undefined, default is null for both spike and drop.
 ```yml test
 models:
   - name: this_is_a_model
-    tests:
+    data_tests:
       - elementary.volume_anomalies:
-          ignore_small_changes:
-            spike_failure_percent_threshold: 2
-            drop_failure_percent_threshold: 50
+          arguments:
+            ignore_small_changes:
+              spike_failure_percent_threshold: 2
+              drop_failure_percent_threshold: 50
 ```
 
 ```yml model
@@ -51,7 +52,7 @@ sources:
     schema: raw
     tables:
       - name: source_table
-        meta:
+        config:
           elementary:
             ignore_small_changes:
               drop_failure_percent_threshold: 50
