--- a/docs/data-tests/anomaly-detection-configuration/timestamp-column.mdx
+++ b/docs/data-tests/anomaly-detection-configuration/timestamp-column.mdx
@@ -30,9 +30,10 @@ If undefined, default is null (no time buckets).
 ```yml test
 models:
   - name: this_is_a_model
-    tests:
+    data_tests:
       - elementary.volume_anomalies:
-          timestamp_column: created_at
+          arguments:
+            timestamp_column: created_at
 ```
 
 ```yml model
@@ -49,7 +50,7 @@ sources:
     schema: raw
     tables:
       - name: source_table
-        meta:
+        config:
           elementary:
             timestamp_column: loaded_at
 ```
