--- a/docs/data-tests/add-elementary-tests.mdx
+++ b/docs/data-tests/add-elementary-tests.mdx
@@ -86,35 +86,39 @@ models:
     config:
       elementary:
         timestamp_column: < timestamp column >
-    tests:
+    data_tests:
       - elementary.freshness_anomalies:
-          # optional - configure different freshness column than timestamp column
-          where_expression: < sql expression >
-          time_bucket:
-            period: < time period >
-            count: < number of periods >
+          arguments:
+            # optional - configure different freshness column than timestamp column
+            where_expression: < sql expression >
+            time_bucket:
+              period: < time period >
+              count: < number of periods >
       - elementary.all_columns_anomalies:
-          column_anomalies: < specific monitors, all if null >
-          where_expression: < sql expression >
-          time_bucket:
-            period: < time period >
-            count: < number of periods >
+          arguments:
+            column_anomalies: < specific monitors, all if null >
+            where_expression: < sql expression >
+            time_bucket:
+              period: < time period >
+              count: < number of periods >
       - elementary.schema_changes
       - elementary.dimension_anomalies:
-          dimensions: < columns or sql expressions of columns >
-          # optional - configure a where a expression to accurate the dimension monitoring
-          where_expression: < sql expression >
-          time_bucket:
-            period: < time period >
-            count: < number of periods >
+          arguments:
+            dimensions: < columns or sql expressions of columns >
+            # optional - configure a where a expression to accurate the dimension monitoring
+            where_expression: < sql expression >
+            time_bucket:
+              period: < time period >
+              count: < number of periods >
 
   - name: < model name >
     ## if no timestamp is configured, elementary will monitor without time filtering
     columns:
       - name: < column name >
-        tests:
+        data_tests:
           - elementary.column_anomalies:
-              column_anomalies: < specific monitors, all if null >
+              arguments:
+                column_anomalies: < specific monitors, all if null >
 ```
 
 ```yml Models example
@@ -125,51 +129,59 @@ models:
     config:
       elementary:
         timestamp_column: 'loaded_at'
-    tests:
+    data_tests:
         - elementary.volume_anomalies:
-            # optional - use tags to run elementary tests on a dedicated run
-            tags: ['elementary']
             config:
-            # optional - change severity
+              # optional - use tags to run elementary tests on a dedicated run
+              tags: ['elementary']
+              # optional - change severity
               severity: warn
         - elementary.all_columns_anomalies:
-            tags: ['elementary']
-            # optional - change global sensitivity
-            anomaly_sensitivity: 3.5
-            timestamp_column: 'updated_at'
-        - elementary.schema_changes:
-            tags: ['elementary']
             config:
+              tags: ['elementary']
+            arguments:
+              # optional - change global sensitivity
+              anomaly_sensitivity: 3.5
+              timestamp_column: 'updated_at'
+        - elementary.schema_changes:
+            config:
+              tags: ['elementary']
               severity: warn
         - elementary.dimension_anomalies:
-            dimensions:
-              - event_type
-              - country_name
-            where_expression: "event_type in ('event_1', 'event_2') and country_name != 'unwanted country'"
-            # optional - use tags to run elementary tests on a dedicated run
-            tags: ['elementary']
+            arguments:
+              dimensions:
+                - event_type
+                - country_name
+              where_expression: "event_type in ('event_1', 'event_2') and country_name != 'unwanted country'"
             config:
-            # optional - change severity
+              # optional - use tags to run elementary tests on a dedicated run
+              tags: ['elementary']
+              # optional - change severity
               severity: warn
 
   - name: users
     ## if no timestamp is configured, elementary will monitor without time filtering
-    tests:
+    data_tests:
         elementary.volume_anomalies
-          tags: ['elementary']
+          config:
+            tags: ['elementary']
     columns:
       - name: user_id
-        tests:
+        data_tests:
           - elementary.column_anomalies:
-              tags: ['elementary']
-              timestamp_column: 'updated_at'
+              config:
+                tags: ['elementary']
+              arguments:
+                timestamp_column: 'updated_at'
       - name: user_name
-        tests:
+        data_tests:
           - elementary.column_anomalies:
-              column_anomalies:
-                - missing_count
-                - min_length
-              tags: ['elementary']
+              arguments:
+                column_anomalies:
+                  - missing_count
+                  - min_length
+              config:
+                tags: ['elementary']
 ```
 
 ```yml Sources
@@ -179,11 +191,10 @@ sources:
     schema: < schema >
     tables:
       - name: < table_name >
-        ## sources don't have config, so elementary config is placed under 'meta'
-        meta:
+        config:
           elementary:
             timestamp_column: < source timestamp column >
-        tests: <here you will add elementary monitors as tests>
+        data_tests: <here you will add elementary monitors as tests>
 ```
 
 ```yml Sources example
@@ -193,25 +204,26 @@ sources:
     schema: "product"
     tables:
       - name: "raw_product_login_events"
-        ## sources don't have config, so elementary config is placed under 'meta'
-        meta:
+        config:
           elementary:
             timestamp_column: "loaded_at"
-        tests:
+        data_tests:
           - elementary.freshness_anomalies
           - elementary.dimension_anomalies:
-              dimensions:
-                - event_type
+              arguments:
+                dimensions:
+                  - event_type
           - elementary.all_columns_anomalies:
-              column_anomalies:
-                - null_count
-                - missing_count
-                - zero_count
+              arguments:
+                column_anomalies:
+                  - null_count
+                  - missing_count
+                  - zero_count
           - elementary.schema_changes_from_baseline
         columns:
           - name: user_id
             data_type: text
-            tests:
+            data_tests:
               - elementary.column_anomalies
           - name: event_name
             data_type: text
