--- a/docs/data-tests/anomaly-detection-configuration/column-anomalies.mdx
+++ b/docs/data-tests/anomaly-detection-configuration/column-anomalies.mdx
@@ -17,12 +17,13 @@ Select which monitors to activate as part of the test.
 ```yml test
 models:
   - name: this_is_a_model
-    tests:
+    data_tests:
       - elementary.column_anomalies:
-          column_anomalies:
-            - null_count
-            - missing_count
-            - average
+          arguments:
+            column_anomalies:
+              - null_count
+              - missing_count
+              - average
 ```
 
 </RequestExample>
