--- a/docs/data-tests/anomaly-detection-configuration/event_timestamp_column.mdx
+++ b/docs/data-tests/anomaly-detection-configuration/event_timestamp_column.mdx
@@ -23,10 +23,11 @@ The test can work in a couple of modes:
 ```yml test
 models:
   - name: this_is_a_model
-    tests:
+    data_tests:
       - elementary.event_timestamp_column:
-          event_timestamp_column: "event_timestamp"
-          update_timestamp_column: "created_at"
+          arguments:
+            event_timestamp_column: "event_timestamp"
+            update_timestamp_column: "created_at"
 ```
 
 </RequestExample>
