--- a/docs/data-tests/anomaly-detection-configuration/exclude_prefix.mdx
+++ b/docs/data-tests/anomaly-detection-configuration/exclude_prefix.mdx
@@ -17,9 +17,10 @@ Param for the `all_columns_anomalies` test only, which enables to exclude a colu
 ```yml test
 models:
   - name: this_is_a_model
-    tests:
+    data_tests:
       - elementary.column_anomalies:
-          exclude_prefix: "id_"
+          arguments:
+            exclude_prefix: "id_"
 ```
 
 </RequestExample>
