--- a/docs/data-tests/anomaly-detection-configuration/exclude_regexp.mdx
+++ b/docs/data-tests/anomaly-detection-configuration/exclude_regexp.mdx
@@ -17,9 +17,10 @@ Param for the `all_columns_anomalies` test only, which enables to exclude a colu
 ```yml test
 models:
   - name: this_is_a_model
-    tests:
+    data_tests:
       - elementary.column_anomalies:
-          exclude_regexp: ".*SDC$"
+          arguments:
+            exclude_regexp: ".*SDC$"
 ```
 
 </RequestExample>
