--- a/docs/data-tests/anomaly-detection-configuration/time-bucket.mdx
+++ b/docs/data-tests/anomaly-detection-configuration/time-bucket.mdx
@@ -33,11 +33,12 @@ For example, if you want to detect volume anomalies in an hourly resolution, you
 ```yml test
 models:
   - name: this_is_a_model
-    tests:
+    data_tests:
       - elementary.volume_anomalies:
-          time_bucket:
-            period: day
-            count: 2
+          arguments:
+            time_bucket:
+              period: day
+              count: 2
 ```
 
 ```yml model
